# -vcpkg

docs/users/: triplets.md
ports/curl/: dependencies.patch  portfile.cmake  vcpkg.json
ports/ffmpeg/: FindFFMPEG.cmake.in
ports/glib/: 0005-debug-macos-python.diff  portfile.cmake
ports/godot-cpp/: portfile.cmake  vcpkg.json
ports/hdf5/: portfile.cmake  vcpkg.json
ports/imgui/: CMakeLists.txt
ports/implot/: CMakeLists.txt
ports/mesa/: portfile.cmake  vcpkg.json
ports/octave/: portfile.cmake  vcpkg.json
ports/onnxruntime/: fix-cmake.patch  onnxruntime_vcpkg_deps.cmake  portfile.cmake  project-config-template.cmake  vcpkg.json
ports/protobuf/: portfile.cmake
ports/qttools/: vcpkg.json
ports/serf/: serf-config.cmake  usage
ports/vcpkg-tool-meson/: cmake-link-only.patch  meson-intl.patch  portfile.cmake  vcpkg-port-config.cmake  vcpkg_configure_meson.cmake
scripts/: ci.baseline.txt  ports.cmake  vcpkg_get_tags.cmake
scripts/azure-pipelines/: azure-pipelines.yml  test-modified-ports.ps1
scripts/buildsystems/: vcpkg.cmake
scripts/cmake/: vcpkg_configure_make.cmake  vcpkg_configure_meson.cmake
scripts/posh-vcpkg/: posh-vcpkg.Tests.ps1
scripts/test_ports/vcpkg-ci-meson/project/: meson.build
scripts/toolchains/: linux.cmake
triplets/community/: x64-windows-intel.cmake
versions/: baseline.json
versions/a-/: arrow.json
versions/c-/: curl.json
versions/f-/: ffmpeg.json
versions/g-/: glib.json  godot-cpp.json
versions/h-/: hdf5.json
versions/l-/: luafilesystem.json
versions/m-/: mesa.json
versions/o-/: octave.json  (+1 more)
(+8 files in other folders)
